syntax = "proto3";
package trinsic.services;

import "google/protobuf/struct.proto";
import "CoreService.proto";

message CreateCredentialTemplateRequest {
  string name = 1;
  JsonPayload schema = 2;
}

message CreateCredentialTemplateResponse {
  string id = 1;
  string uri = 2;
}

message GetCredentialTemplateRequest {
  string id = 1;
}

message GetCredentialTemplateResponse {
  CredentialTemplate template = 1;
}

message SearchCredentialTemplatesRequest {
  string query = 1;
}

message SearchCredentialTemplatesResponse {
  repeated CredentialTemplate templates = 1;
}

message UpdateCredentialTemplateRequest {
  string id = 1;
  string name = 2;
  string version = 3;
  JsonPayload schema = 4;
}

message UpdateCredentialTemplateResponse {
  CredentialTemplate template = 1;
}

message DeleteCredentialTemplateRequest {
  string id = 1;
}

message DeleteCredentialTemplateResponse {}

message CredentialTemplate {
  string Id = 1;
  string Name = 2;
  string Version = 3;
  JsonPayload Schema = 4;
}

service CredentialTemplates {
  rpc Create(CreateCredentialTemplateRequest) returns (CreateCredentialTemplateResponse);
  rpc Get(GetCredentialTemplateRequest) returns (GetCredentialTemplateResponse);
  rpc Search(SearchCredentialTemplatesRequest) returns (SearchCredentialTemplatesResponse);
  rpc Update(UpdateCredentialTemplateRequest) returns (UpdateCredentialTemplateResponse);
  rpc Delete(DeleteCredentialTemplateRequest) returns (DeleteCredentialTemplateResponse);
}

