syntax = "proto3";
option go_package = "github.com/trinsic-id/sdk";
option java_package = "trinsic.services";

package trinsic.services;

import 'models/Attributes.proto';

message CreatePresentationTemplateRequest {
  string name = 2;
  repeated Attribute attributes = 3;
}

message CreatePresentationTemplateResponse {
  string id = 1;
  string name = 2;
  repeated Attribute attributes= 3;
}

message ListPresentationTemplateResponse {
  repeated PresentationTemplate templates = 1;
}

message ListPresentationTemplateRequest{
  
}

message PresentationTemplate {
  string id = 1;
  string name = 2;
  repeated Attribute attributes= 3;
}

//service PresentationTemplates {
//  rpc Create(CreatePresentationTemplateRequest) returns (CreatePresentationTemplateResponse);
//  rpc List(ListPresentationTemplateRequest) returns (ListPresentationTemplateResponse);
//}
